# security_camera

./: .gitignore  Cargo.toml  README.MD  clear.sh  config.json  notify_end_person.sh  notify_start_person.sh  notify_timelapse_rollover.sh  polygon.csv
src/: camera.rs  config.rs  main.rs
